# attendance-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
admin-panel/: package-lock.json  package.json
admin-panel/src/: App.jsx  api.js
admin-panel/src/components/: ProtectedRoute.jsx  Sidebar.jsx
admin-panel/src/pages/: Attendance.jsx  CreateUser.jsx  Dashboard.jsx  Login.jsx  Users.jsx
backend/: api.py  auth.py  auth_config.py
bot/: config.py  database.py  face.py  handlers.py  location.py  logging_config.py  main.py  models.py  rate_limiter.py
instance/: attendance.db
